terminar o módulo de cursos
